--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-spacy==3.0.5
-spacy_streamlit==1.0.0
-gensim==3.8.3
 streamlit==0.79.0
+spacy==3.0.5
+gensim==3.8.3
+en_core_web_sm==3.0.0
+spacy_streamlit==1.0.0
 sumy==0.8.1
 beautifulsoup4==4.9.3
