--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,4 @@ en_core_web_sm==3.0.0
 spacy_streamlit==1.0.0
 sumy==0.8.1
 beautifulsoup4==4.9.3
-spacy>=2.2.0,<3.0.0
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz#egg=en_core_web_sm
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz
